--- a/package.json
+++ b/package.json
@@ -5,14 +5,30 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --dev"
+    "dev": "electron . --dev",
+    "build": "electron-builder --win"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
-    "electron": "^28.0.0",
     "electron-store": "^8.1.0",
     "exceljs": "^4.4.0"
+  },
+  "devDependencies": {
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1"
+  },
+  "build": {
+    "appId": "com.wechat.article.crawler",
+    "productName": "WeChat Article Crawler",
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": "nsis",
+      "sign": null
+    },
+    "forceCodeSigning": false
   }
 } 
