--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "wechat-article-crawler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "微信公众号文章抓取工具",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
-    "build": "electron-builder --win"
+    "build": "electron-builder",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
@@ -29,6 +30,11 @@
       "target": "nsis",
       "sign": null
     },
-    "forceCodeSigning": false
+    "forceCodeSigning": false,
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true
+    }
   }
 } 
